--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot_plugin_ACMD"
-version = "0.0.4"
+version = "0.0.5"
 description = "一个专注于解决输入问题的命令实现。"
 authors = ["hlfzsi"]
 license = "AGPL-3.0"
@@ -18,6 +18,7 @@ pypinyin = "^0.53.0"
 prompt-toolkit = "^3.0.48"
 httpx = "^0.28.1"
 rapidfuzz = "^3.11.0"
+nonebot-plugin-localstore = "^0.7.3"
 
 
 [[tool.poetry.source]]
